kubernetes/apps/home/actual-budget/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget
  namespace: home
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`budget.homelab.local`)
    kind: Rule
    middlewares:
    - name: authelia
    services:
    - name: actual-budget
      port: 80
  tls:
    secretName: budget-homelab-tls
